# movies-recomendation-api

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: router.py
src/api/v1/endpoints/: compare.py  health.py  recommend.py  search.py
src/schemas/: recomment_schemas.py
src/services/: model_creator_service.py  model_service.py
src/utils/: convert.py  dowload_model.py
