[project]
name = "movies-recomendation-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "certifi==2025.11.12",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.127.0",
    "filelock==3.20.1",
    "fsspec==2025.12.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.2.3",
    "idna==3.11",
    "joblib==1.5.3",
    "numpy==2.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "shellingham==1.5.4",
    "six==1.17.0",
    "starlette==0.50.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typer-slim==0.20.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uvicorn==0.40.0",
]
